<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
>

    <ImageButton
        android:id="@+id/real_oauth_call"
        android:contentDescription="@string/oauth_login"
        android:focusable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4.0dip"
        android:src="@drawable/login_grey_18"
        android:onClick="handleRealOAuthCall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6.0dip"
        android:text="@string/oauth_introductory_blurb"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6.0dip"
        android:text="@string/oauth_introductory_blurb_no_account"
        android:textAppearance="?android:textAppearanceSmall" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    >

        <!-- 
        <Button
            android:id="@+id/real_oauth_call"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oauth_real_login"
            android:onClick="handleRealOAuthCall" />
 -->

        <Button
            android:id="@+id/mock_oauth_calls"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oauth_mock_login"
            android:onClick="handleMockOAuthCall" />

        <Button
            android:id="@+id/clear_oauth_credentials"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oauth_clear_credentials" />
        <!-- android:onClick="handleMockOAuthCall"  -->

    </LinearLayout>

    <TextView
        android:id="@+id/response_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

</LinearLayout>
